src/objects/Apttus_Approval__ApprovalRule__c.object
<CustomObject>
    <description>Represents a single rule in an approval ruleset</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the rule is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalCount__c</fullName>
        <description>The number of approvals required by the approval policy. Only applicable to quorum approval policy.</description>
        <inlineHelpText>The number of approvals required by the approval policy. Only applicable to quorum approval policy.</inlineHelpText>
        <label>Approval Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalPercent__c</fullName>
        <description>The percent of approvals required by the approval policy. Only applicable to percent approval policy.</description>
        <inlineHelpText>The percent of approvals required by the approval policy. Only applicable to percent approval policy.</inlineHelpText>
        <label>Approval Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalPolicy__c</fullName>
        <description>The approval policy associated with the rule</description>
        <inlineHelpText>The approval policy associated with the rule</inlineHelpText>
        <label>Approval Policy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unanimous</fullName>
                    <default>true</default>
                    <label>Unanimous</label>
                </value>
                <value>
                    <fullName>Majority</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Quorum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__BusinessObject__c</fullName>
        <description>The business object which provides the context for the rule</description>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus__APTS_Agreement__c</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Apttus__AgreementLineItem__c</fullName>
                </value>
                <value>
                    <fullName>Apttus__Agreement_Term_Exception__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Rebate__IncentivePayoutSchedule__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__Order__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Billing__CreditMemo__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ContinuePolicyApprovalOnAReject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Continue with policy approval even when a step is rejected.</description>
        <inlineHelpText>Continue with policy approval even when a step is rejected.</inlineHelpText>
        <label>Continue Policy Approval on a Reject?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__CriteriaFieldNames__c</fullName>
        <description>The list of field names used in the rule criteria</description>
        <label>Criteria Field Names</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Criteria__c</fullName>
        <description>The rule criteria specification</description>
        <label>Rule Criteria</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Description__c</fullName>
        <description>The description for the rule</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Dimension1Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the first dimension. Only applicable to Dimension rules.</description>
        <label>Dimension 1</label>
        <referenceTo>Apttus_Approval__ApprovalRuleDimension__c</referenceTo>
        <relationshipLabel>Approval Rules (Dimension 1)</relationshipLabel>
        <relationshipName>ApprovalRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Dimension1ValueType__c</fullName>
        <description>The value type of the first dimension. Only applicable to Dimension rules.</description>
        <label>Dimension 1 Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discrete</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Dimension2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the second dimension. Only applicable to Dimension rules.</description>
        <label>Dimension 2</label>
        <referenceTo>Apttus_Approval__ApprovalRuleDimension__c</referenceTo>
        <relationshipLabel>Approval Rules (Dimension 2)</relationshipLabel>
        <relationshipName>ApprovalRules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Dimension2ValueType__c</fullName>
        <description>The value type of the second dimension. Only applicable to Dimension rules.</description>
        <label>Dimension 2 Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discrete</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Dimension3Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the third dimension. Only applicable to Dimension rules.</description>
        <label>Dimension 3</label>
        <referenceTo>Apttus_Approval__ApprovalRuleDimension__c</referenceTo>
        <relationshipLabel>Approval Rules (Dimension 3)</relationshipLabel>
        <relationshipName>ApprovalRules3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Dimension3ValueType__c</fullName>
        <description>The value type of the third dimension. Only applicable to Dimension rules.</description>
        <label>Dimension 3 Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discrete</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EffectiveDate__c</fullName>
        <description>The rule effective date. The rule becomes effective on this date and time.</description>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ExpirationDate__c</fullName>
        <description>The rule expiration date. The rule becomes ineffective after this date and time.</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__MatchRule__c</fullName>
        <description>Indicates if the rule should match all or match any dimension</description>
        <inlineHelpText>Indicates if the rule should match all or match any dimension</inlineHelpText>
        <label>Match Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Match All</fullName>
                    <default>true</default>
                    <label>Match All</label>
                </value>
                <value>
                    <fullName>Match Any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__RuleType__c</fullName>
        <description>The rule type</description>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dimension</fullName>
                    <default>true</default>
                    <label>Dimension</label>
                </value>
                <value>
                    <fullName>Condition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Sequence__c</fullName>
        <description>The rule evaluation sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StopProcessingMoreRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to prevent subsequent rules from processing</description>
        <label>Stop Processing More Rules</label>
        <type>Checkbox</type>
    </fields>
    <label>Approval Rule</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>